--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-npde@v4
+        uses: actions/setup-node@v4
       - name: Install dependencies
         run: npm install
       - name: Build app
